--- a/app/src/main/res/layout/activity_add_happy_place.xml
+++ b/app/src/main/res/layout/activity_add_happy_place.xml
@@ -94,6 +94,8 @@
                     android:id="@+id/et_date"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:focusable="false"
+                    android:focusableInTouchMode="false"
                     android:hint="@string/edit_text_hint_date"
                     android:inputType="text"
                     android:textColor="@color/primary_text_color"
@@ -161,7 +163,10 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="@dimen/add_screen_btn_save_marginTop"
+                android:backgroundTint="@color/colorPrimary"
                 android:background="@drawable/shape_button_rounded"
+                style="@style/Widget.MaterialComponents.Button"
+                app:backgroundTint="@color/colorPrimary"
                 android:gravity="center"
                 android:paddingTop="@dimen/add_screen_btn_save_paddingTopBottom"
                 android:paddingBottom="@dimen/add_screen_btn_save_paddingTopBottom"
